seaqt/QtCore/gen_qtemporarydir.h

class QTemporaryDir;
typedef struct QTemporaryDir QTemporaryDir;
QTemporaryDir* QTemporaryDir_new();
QTemporaryDir* QTemporaryDir_new2(struct miqt_string templateName);
bool QTemporaryDir_isValid(const QTemporaryDir* self);
struct miqt_string QTemporaryDir_errorString(const QTemporaryDir* self);
bool QTemporaryDir_autoRemove(const QTemporaryDir* self);
void QTemporaryDir_setAutoRemove(QTemporaryDir* self, bool b);
bool QTemporaryDir_remove(QTemporaryDir* self);
struct miqt_string QTemporaryDir_path(const QTemporaryDir* self);
struct miqt_string QTemporaryDir_filePath(const QTemporaryDir* self, struct miqt_string fileName);